{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 45,
  "lineage": "79c7d502-ddf7-7b2f-bc21-7cf1320df573",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "app_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.205.56.15",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-01-17T00:55:58.689-08:00",
            "id": "projects/devops-1-262914/regions/europe-west1/addresses/reddit-app-ip",
            "name": "reddit-app-ip",
            "network_tier": "PREMIUM",
            "project": "devops-1-262914",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-1-262914/regions/europe-west1/addresses/reddit-app-ip"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_mongo",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-01-17T00:55:59.274-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/devops-1-262914/global/firewalls/reddit-db",
            "name": "reddit-db",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-1-262914/global/networks/default",
            "priority": 1000,
            "project": "devops-1-262914",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-1-262914/global/firewalls/reddit-db",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "reddit-app"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "reddit-db"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_puma",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9292",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-01-17T00:55:58.936-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/devops-1-262914/global/firewalls/reddit-app",
            "name": "reddit-app",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-1-262914/global/networks/default",
            "priority": 1000,
            "project": "devops-1-262914",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-1-262914/global/firewalls/reddit-app",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "reddit-app"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-01-17T00:55:58.461-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/devops-1-262914/global/firewalls/default-allow-ssh",
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-1-262914/global/networks/default",
            "priority": 1000,
            "project": "devops-1-262914",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-1-262914/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20200108",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devops-1-262914/zones/europe-west1-b/disks/reddit-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devops-1-262914/zones/europe-west1-b/instances/reddit-app",
            "instance_id": "2171226779124811851",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "sshKeys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDYFkEL8G3VxkfcEBqEWOvuyYZTzk5cT8WIm3o7sNvoaWznTGk3PbRaRfbk+qMv6W0r5TS120zg8E77WjytMNKeulZntZYJ3klTESfrRieJyWpojWsUfPnZDxU06Mlu5uitjdJiC8MBRYims7Ju/mNl4LoDunGtWlEDlm7dRxR37hC8Yz7tRPwmjj9Nbhz7IJJWRgaMpqr5MyxiVIvE6/0yuQ1VofCeCehf5zKMKs/UaPW19uu6lFaS9QTX8Dm+JYVCMM7uW6O2wWbmbKMVvpr0dAvH15ZPK1yjhz0Ezyu7YIF8sQVNWOUyk9mHdrxek1gpMSgWaVqarG6yASMD/Nyh appuser\n"
            },
            "metadata_fingerprint": "BjjlXmpY1Hw=",
            "name": "reddit-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.205.56.15",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-1-262914/global/networks/default",
                "network_ip": "10.132.15.204",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-1-262914/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "devops-1-262914"
              }
            ],
            "project": "devops-1-262914",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-1-262914/zones/europe-west1-b/instances/reddit-app",
            "tags": [
              "reddit-app"
            ],
            "tags_fingerprint": "M-ggixIz-AU=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "module.app.google_compute_address.app_ip"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20200108",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devops-1-262914/zones/europe-west1-b/disks/reddit-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devops-1-262914/zones/europe-west1-b/instances/reddit-db",
            "instance_id": "8029815801572542576",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "sshKeys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDYFkEL8G3VxkfcEBqEWOvuyYZTzk5cT8WIm3o7sNvoaWznTGk3PbRaRfbk+qMv6W0r5TS120zg8E77WjytMNKeulZntZYJ3klTESfrRieJyWpojWsUfPnZDxU06Mlu5uitjdJiC8MBRYims7Ju/mNl4LoDunGtWlEDlm7dRxR37hC8Yz7tRPwmjj9Nbhz7IJJWRgaMpqr5MyxiVIvE6/0yuQ1VofCeCehf5zKMKs/UaPW19uu6lFaS9QTX8Dm+JYVCMM7uW6O2wWbmbKMVvpr0dAvH15ZPK1yjhz0Ezyu7YIF8sQVNWOUyk9mHdrxek1gpMSgWaVqarG6yASMD/Nyh appuser\n"
            },
            "metadata_fingerprint": "BjjlXmpY1Hw=",
            "name": "reddit-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.205.27.138",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-1-262914/global/networks/default",
                "network_ip": "10.132.15.203",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-1-262914/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "devops-1-262914"
              }
            ],
            "project": "devops-1-262914",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-1-262914/zones/europe-west1-b/instances/reddit-db",
            "tags": [
              "reddit-db"
            ],
            "tags_fingerprint": "NQyRUqL7UTU=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}